<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.payment_qrcode.ui.screen.signin.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_80"
                android:src="@drawable/logo" />

            <View
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:background="#D8D8D8" />

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/fragment_login_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_36">

                <com.example.payment_qrcode.ui.widgets.CustomTextView
                    android:id="@+id/txt_use_your"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_login_user_your"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:src="@drawable/passport_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_use_your" />

                <com.example.payment_qrcode.ui.widgets.CustomTextView
                    android:id="@+id/txt_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_login_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:id="@+id/txt_login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@{ viewModel.lvdErrorLogin }"
                android:textColor="#FF0000"
                android:textSize="@dimen/sp_16" />

            <com.example.payment_qrcode.ui.widgets.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_36"
                android:background="@drawable/background_edit_text"
                android:hint="@string/fragment_login_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_10"
                android:text="@={viewModel.lvdEmail }"
                android:textColor="@color/white"
                android:textColorHint="@color/white_hint" />

            <com.example.payment_qrcode.ui.widgets.CustomEditText
                onDrawableClick="@{viewModel.onClickTouchId}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_36"
                android:background="@drawable/background_edit_text"
                android:drawableEnd="@drawable/touch_id"
                android:hint="@string/fragment_login_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/sp_10"
                android:text="@={viewModel.lvdPassword }"
                android:textColor="@color/white"
                android:textColorHint="@color/white_hint" />

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/fragment_login_i_forgot_password"
                android:textColor="#EFC74E"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.payment_qrcode.ui.widgets.CustomButton
                android:id="@+id/btn_login"
                clickSafe="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_36"
                android:background="@drawable/background_button_yellow_enabled"
                android:text="@string/fragment_login_login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <com.example.payment_qrcode.ui.widgets.CustomButton
                android:id="@+id/btn_switch_sign_up"
                clickSafe="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_36"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/background_button_gray"
                android:text="@string/fragment_login_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </ScrollView>
</layout>