<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.payment_qrcode.ui.screen.wallet.WalletViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_180"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_40"
            android:src="@drawable/logo" />

        <com.example.payment_qrcode.ui.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/fragment_wallet_available_balance"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2">

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:id="@+id/txt_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_4"
                android:layout_marginBottom="@dimen/dp_4"
                android:text="@string/fragment_wallet_currency"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="@+id/txt_balance"
                app:layout_constraintEnd_toStartOf="@+id/txt_balance" />

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:id="@+id/txt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.lvdBalance}"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_24">

            <ImageView
                android:id="@+id/img_top_up"
                clickSafe="@{ (v) -> viewModel.onClick(v) }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/top_up"
                app:layout_constraintEnd_toStartOf="@+id/img_vault"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_vault"
                clickSafe="@{ (v) -> viewModel.onClick(v) }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/vault"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_top_up"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:id="@+id/txt_top_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:text="@string/fragment_wallet_top_up"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_top_up"
                app:layout_constraintStart_toStartOf="@+id/img_top_up"
                app:layout_constraintTop_toBottomOf="@+id/img_top_up" />

            <com.example.payment_qrcode.ui.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_wallet_vault"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_vault"
                app:layout_constraintStart_toStartOf="@+id/img_vault"
                app:layout_constraintTop_toTopOf="@+id/txt_top_up" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_bottom_white"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_16">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh__wallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>
    </LinearLayout>

</layout>